--- a/html/template/modal.html
+++ b/html/template/modal.html
@@ -1850,31 +1850,31 @@
           </div>
           <div class="modal-body modal-content-scroll h-[25rem]">
             <div class="flex items-center mb-3 gap-3"> 
-              <svg class="w-[2.5rem] h-[2.5rem] stroke-title"> 
+              <svg class="w-[2.5rem] min-w-[1.25rem] h-[2.5rem] stroke-title"> 
                 <use href="../../assets/svg/sprite.svg#Arrow-Right"> </use>
               </svg>
               <p>For a site to be successful, a designer must be able to communicate their ideas.</p>
             </div>
             <div class="flex items-center mb-3 gap-3"> 
-              <svg class="w-[2.5rem] h-[2.5rem] stroke-title"> 
+              <svg class="w-[2.5rem] min-w-[1.25rem] h-[2.5rem] stroke-title"> 
                 <use href="../../assets/svg/sprite.svg#Arrow-Right"> </use>
               </svg>
               <p>Most businesses employ a certain font or typography so that clients can quickly distinguish them from their rivals.</p>
             </div>
             <div class="flex items-center mb-3 gap-3"> 
-              <svg class="w-[2.5rem] h-[2.5rem] stroke-title"> 
+              <svg class="w-[2.5rem] min-w-[1.25rem] h-[2.5rem] stroke-title"> 
                 <use href="../../assets/svg/sprite.svg#Arrow-Right"> </use>
               </svg>
               <p>We build specialized websites for companies, list them on digital directories, and set up a sales funnel to boost ROI.</p>
             </div>
             <div class="flex items-center mb-3 gap-3"> 
-              <svg class="w-[2.5rem] h-[2.5rem] stroke-title"> 
+              <svg class="w-[2.5rem] min-w-[1.25rem] h-[2.5rem] stroke-title"> 
                 <use href="../../assets/svg/sprite.svg#Arrow-Right"> </use>
               </svg>
               <p> Chat with a firm about what they want, and inquire about the target audience.</p>
             </div>
             <div class="flex items-center mb-3 gap-3"> 
-              <svg class="w-[2.5rem] h-[2.5rem] stroke-title"> 
+              <svg class="w-[2.5rem] min-w-[1.25rem] h-[2.5rem] stroke-title"> 
                 <use href="../../assets/svg/sprite.svg#Arrow-Right"> </use>
               </svg>
               <p>firms may more easily and precisely communicate their brands through typography.</p>
@@ -1907,7 +1907,7 @@
                 </div>
                 <div class="!mb-0"><a href="forgot-password.html">Forgot Password? </a></div>
               </div>
-              <div class="!mb-0"><a class="btn btn-primary text-white" href="index.html">Sign in</a></div>
+              <div class="!mb-0 mx-auto"><a class="btn btn-primary !text-white py-2" href="index.html">Sign in</a></div>
               <div>
                 <h4>Or Sign in with</h4>
               </div>
@@ -1929,87 +1929,87 @@
             <p class="leading-[1.9]">Here, you can see that inside the
               <label class="button-label btn-secondary text-sm py-1 px-2" data-tw-tooltip="Tooltip">popover</label>  modal,  <a class="font-semibold text-secondary" href="javascript:void(0)" data-tw-tooltip="link">This link  </a> and that link have tooltips on hover.
             </p>
-            <div class="modal-main">
-              <input class="peer" id="modal-10" name="modal-10" type="checkbox">
-              <label class="modal-overlay peer-checked:block" for="modal-10"></label>
-              <div class="modal modal-top-left peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
-                <div class="modal-body text-center">
-                  <ul class="modal-img">
-                    <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
-                    <li><img class="w-52" src="../../assets/images/modal/instagram.gif" alt="instagram"></li>
-                    <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
-                  </ul>
-                  <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-                  <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-10">Create an account</label>
-                </div>
-              </div>
-            </div>
-            <div class="modal-main">
-              <input class="peer" id="modal-11" name="modal-11" type="checkbox">
-              <label class="modal-overlay peer-checked:block" for="modal-11"></label>
-              <div class="modal modal-top-center peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
-                <div class="modal-body text-center">
-                  <ul class="modal-img">
-                    <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
-                    <li><img class="w-52" src="../../assets/images/modal/instagram.gif" alt="instagram"></li>
-                    <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
-                  </ul>
-                  <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-                  <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-11">Create an account</label>
-                </div>
-              </div>
-            </div>
-            <div class="modal-main">
-              <input class="peer" id="modal-14" name="modal-14" type="checkbox">
-              <label class="modal-overlay peer-checked:block" for="modal-14"></label>
-              <div class="modal modal-top-right peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
-                <div class="modal-body text-center">
-                  <ul class="modal-img">
-                    <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
-                    <li><img class="w-52" src="../../assets/images/modal/instagram.gif" alt="instagram"></li>
-                    <li> <img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
-                  </ul>
-                  <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
-                  <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-14"> Create an account</label>
-                </div>
-              </div>
-            </div>
-            <div class="modal-main">
-              <input class="peer" id="modal-12" name="modal-12" type="checkbox">
-              <label class="modal-overlay peer-checked:block" for="modal-12"></label>
-              <div class="modal modal-bottom-left peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
-                <div class="modal-body text-center">
-                  <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
-                  <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
-                  <p class="mb-3">Now, you can access your account.</p>
-                  <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-12">Close</label>
-                </div>
-              </div>
-            </div>
-            <div class="modal-main">
-              <input class="peer" id="modal-13" name="modal-13" type="checkbox">
-              <label class="modal-overlay peer-checked:block" for="modal-13"></label>
-              <div class="modal modal-bottom-center peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
-                <div class="modal-body text-center">
-                  <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
-                  <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
-                  <p class="mb-3">Now, you can access your account.</p>
-                  <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-13">Close</label>
-                </div>
-              </div>
-            </div>
-            <div class="modal-main">
-              <input class="peer" id="modal-15" name="modal-15" type="checkbox">
-              <label class="modal-overlay peer-checked:block" for="modal-15"></label>
-              <div class="modal modal-bottom-right peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
-                <div class="modal-body text-center">
-                  <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
-                  <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
-                  <p class="mb-3">Now, you can access your account.</p>
-                  <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-15">Close</label>
-                </div>
-              </div>
-            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-main">
+        <input class="peer" id="modal-10" name="modal-10" type="checkbox">
+        <label class="modal-overlay peer-checked:block" for="modal-10"></label>
+        <div class="modal modal-top-left peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
+          <div class="modal-body text-center">
+            <ul class="modal-img">
+              <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
+              <li><img class="w-52" src="../../assets/images/modal/instagram.gif" alt="instagram"></li>
+              <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
+            </ul>
+            <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
+            <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-10">Create an account</label>
+          </div>
+        </div>
+      </div>
+      <div class="modal-main">
+        <input class="peer" id="modal-11" name="modal-11" type="checkbox">
+        <label class="modal-overlay peer-checked:block" for="modal-11"></label>
+        <div class="modal modal-top-center peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
+          <div class="modal-body text-center">
+            <ul class="modal-img">
+              <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
+              <li><img class="w-52" src="../../assets/images/modal/instagram.gif" alt="instagram"></li>
+              <li><img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
+            </ul>
+            <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
+            <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-11">Create an account</label>
+          </div>
+        </div>
+      </div>
+      <div class="modal-main">
+        <input class="peer" id="modal-14" name="modal-14" type="checkbox">
+        <label class="modal-overlay peer-checked:block" for="modal-14"></label>
+        <div class="modal modal-top-right peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
+          <div class="modal-body text-center">
+            <ul class="modal-img">
+              <li><img class="w-52" src="../../assets/images/modal/whatsapp.gif" alt="whatsapp"></li>
+              <li><img class="w-52" src="../../assets/images/modal/instagram.gif" alt="instagram"></li>
+              <li> <img class="w-52" src="../../assets/images/modal/facebook.gif" alt="facebook"></li>
+            </ul>
+            <p class="my-3">Remove your complete account from your phone or tablet to sign out of the Gmail app.</p>
+            <label class="cursor-pointer btn btn-primary py-1 px-2 text-white inline-block text-sm" for="modal-14"> Create an account</label>
+          </div>
+        </div>
+      </div>
+      <div class="modal-main">
+        <input class="peer" id="modal-12" name="modal-12" type="checkbox">
+        <label class="modal-overlay peer-checked:block" for="modal-12"></label>
+        <div class="modal modal-bottom-left peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
+          <div class="modal-body text-center">
+            <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
+            <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
+            <p class="mb-3">Now, you can access your account.</p>
+            <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-12">Close</label>
+          </div>
+        </div>
+      </div>
+      <div class="modal-main">
+        <input class="peer" id="modal-13" name="modal-13" type="checkbox">
+        <label class="modal-overlay peer-checked:block" for="modal-13"></label>
+        <div class="modal modal-bottom-center peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
+          <div class="modal-body text-center">
+            <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
+            <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
+            <p class="mb-3">Now, you can access your account.</p>
+            <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-13">Close</label>
+          </div>
+        </div>
+      </div>
+      <div class="modal-main">
+        <input class="peer" id="modal-15" name="modal-15" type="checkbox">
+        <label class="modal-overlay peer-checked:block" for="modal-15"></label>
+        <div class="modal modal-bottom-right peer-checked:opacity-100 peer-checked:visible w-[18.75rem] sm:w-56 dark:bg-sidebar-dark2">
+          <div class="modal-body text-center">
+            <div class="modal-img"><img class="w-28" src="../../assets/images/modal/success.gif" alt="success"></div>
+            <h3 class="text-lg font-bold leading-none mt-1">Success Message</h3>
+            <p class="mb-3">Now, you can access your account.</p>
+            <label class="cursor-pointer btn btn-success py-1 px-2 text-white inline-block text-sm" for="modal-15">Close</label>
           </div>
         </div>
       </div>
